fix(ui): check box,fix check-box tick to fit and correctly align in its container box

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -275,11 +275,10 @@
   display: inline-block;
   height: 25px;
   margin-top: 15px;
+  position: absolute;
+  top: 6px;
   width: 25px;
   border-radius: 4px;
-  position: absolute;
-  bottom: 0;
-  top: 6px;
 
   &::after {
     content: '';
